Fix styles Destination tablet view

--- a/src/pages/Destination/styles.scss
+++ b/src/pages/Destination/styles.scss
@@ -69,6 +69,7 @@
           }
           @media (min-width: $tablet-width) {
             width: 300px;
+            margin: 0 auto;
           }
           @media (min-width: $desktop-width) {
             justify-self: flex-start;
